--- a/apps/my-project/project.json
+++ b/apps/my-project/project.json
@@ -5,58 +5,31 @@
   "projectType": "application",
   "targets": {
     "build": {
-      "executor": "@nrwl/webpack:webpack",
+      "executor": "@nrwl/vite:build",
       "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
-        "compiler": "babel",
-        "outputPath": "dist/apps/my-project",
-        "index": "apps/my-project/src/index.html",
-        "baseHref": "/",
-        "main": "apps/my-project/src/main.tsx",
-        "polyfills": "apps/my-project/src/polyfills.ts",
-        "tsConfig": "apps/my-project/tsconfig.app.json",
-        "assets": [
-          "apps/my-project/src/favicon.ico",
-          "apps/my-project/src/assets"
-        ],
-        "styles": [],
-        "scripts": [],
-        "webpackConfig": "@nrwl/react/plugins/webpack"
+        "outputPath": "dist/apps/my-project"
       },
       "configurations": {
         "development": {
-          "extractLicenses": false,
-          "optimization": false,
-          "sourceMap": true,
-          "vendorChunk": true
+          "mode": "development"
         },
         "production": {
-          "fileReplacements": [
-            {
-              "replace": "apps/my-project/src/environments/environment.ts",
-              "with": "apps/my-project/src/environments/environment.prod.ts"
-            }
-          ],
-          "optimization": true,
-          "outputHashing": "all",
-          "sourceMap": false,
-          "namedChunks": false,
-          "extractLicenses": true,
-          "vendorChunk": false
+          "mode": "production"
         }
       }
     },
     "serve": {
-      "executor": "@nrwl/webpack:dev-server",
+      "executor": "@nrwl/vite:dev-server",
       "defaultConfiguration": "development",
       "options": {
-        "buildTarget": "my-project:build",
-        "hmr": true
+        "buildTarget": "my-project:build"
       },
       "configurations": {
         "development": {
-          "buildTarget": "my-project:build:development"
+          "buildTarget": "my-project:build:development",
+          "hmr": true
         },
         "production": {
           "buildTarget": "my-project:build:production",
@@ -64,19 +37,19 @@
         }
       }
     },
+    "test": {
+      "executor": "@nrwl/vite:test",
+      "outputs": ["coverage/apps/my-project"],
+      "options": {
+        "passWithNoTests": true,
+        "reportsDirectory": "../../coverage/apps/my-project"
+      }
+    },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["apps/my-project/**/*.{ts,tsx,js,jsx}"]
-      }
-    },
-    "test": {
-      "executor": "@nrwl/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
-      "options": {
-        "jestConfig": "apps/my-project/jest.config.ts",
-        "passWithNoTests": true
       }
     }
   },
