--- a/libs/layout/tsconfig.json
+++ b/libs/layout/tsconfig.json
@@ -6,13 +6,13 @@
     "allowSyntheticDefaultImports": true,
     "strict": false,
     "jsxImportSource": "@emotion/react",
-    "types": ["vite/client", "vitest"]
+    "types": ["vitest"]
   },
   "files": [],
   "include": [],
   "references": [
     {
-      "path": "./tsconfig.app.json"
+      "path": "./tsconfig.lib.json"
     },
     {
       "path": "./tsconfig.spec.json"
