--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,12 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@my-project/layout": ["libs/layout/src/index.ts"],
+      "@my-project/menu-items": ["libs/menu-items/src/index.ts"],
+      "@my-project/ui-component": ["libs/ui-component/src/index.ts"],
+      "@my-project/views": ["libs/views/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
