--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "my-project",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx run my-project:serve"
+  },
   "private": true,
   "dependencies": {
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
+    "@mui/material": "^5.13.7",
+    "@tabler/icons-react": "^2.24.0",
     "core-js": "^3.6.5",
+    "formik": "^2.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "vite-plugin-svgr": "^3.2.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
@@ -36,6 +43,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "@vitest/coverage-c8": "~0.25.8",
     "@vitest/ui": "^0.25.8",
+    "autoprefixer": "10.4.13",
     "babel-jest": "28.1.1",
     "cypress": "^11.0.0",
     "eslint": "~8.15.0",
@@ -49,9 +57,11 @@
     "jest-environment-jsdom": "28.1.1",
     "jsdom": "~20.0.3",
     "nx": "15.4.5",
+    "postcss": "8.4.19",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "3.2.4",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2",
