create-page-register-and-set-routes

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,7 @@
       "@my-project/layout": ["libs/layout/src/index.ts"],
       "@my-project/login-form": ["libs/login-form/src/index.ts"],
       "@my-project/menu-items": ["libs/menu-items/src/index.ts"],
+      "@my-project/routes": ["libs/routes/src/index.ts"],
       "@my-project/ui-component": ["libs/ui-component/src/index.ts"],
       "@my-project/views": ["libs/views/src/index.ts"]
     }
