--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "formik": "^2.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.1",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0",
     "vite-plugin-svgr": "^3.2.0",
