--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@mui/material": "^5.13.7",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tabler/icons-react": "^2.24.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/crypto-js": "^4.1.1",
+    "bcryptjs": "^2.4.3",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.1.1",
     "formik": "^2.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "regenerator-runtime": "0.13.7",
+    "sweetalert2": "^11.7.18",
     "tslib": "^2.3.0",
     "vite-plugin-svgr": "^3.2.0",
     "yup": "^1.2.0"
@@ -37,7 +43,7 @@
     "@svgr/webpack": "^6.1.2",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
-    "@types/node": "18.11.9",
+    "@types/node": "^20.4.3",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
